--- a/godothub/src/index.css
+++ b/godothub/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Russo+One&display=swap');
+
+.russo-one-regular {
+  font-family: "Russo One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.active {
+  font-weight: bold;
+  color: #fa770c;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +23,34 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (max-width: 1400px) { /* Big Screens */
+  .games-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1024px) { /* Medium Screens */
+  .games-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) { /* Small Screens */
+  .games-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) { /* Small Screens */
+  .game-title {
+    font-size: 1.2rem;
+    margin: 5px 0;
+  }
+
+  .game-price-wrapper {
+    margin-top: 5px;
+    font-size: 1.2rem;
+  }
 }
