--- a/godothub/src/styles/upload_game.css
+++ b/godothub/src/styles/upload_game.css
@@ -1,41 +1,85 @@
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-input[type="text"],
-input[type="number"],
-textarea,
-input[type="file"] {
-  padding: 10px;
-  border-radius: 5px;
+.upload-game-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
   border: 1px solid #ddd;
-  width: 100%;
+  border-radius: 8px;
+  background-color: #f7f7f7;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
 }
-  
-button {
-  background-color: #007bff;
-  color: white;
+
+.form-title {
+  font-size: 24px;
+  color: #333;
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Russo One';
+}
+
+.upload-game-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group label {
+  font-weight: 600;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+.form-input, .form-textarea, .form-file-input {
+  width: 100%;
   padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 1em;
+}
+
+.form-textarea {
+  resize: vertical;
+  height: 100px;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  background-color: #FF9A2E;
+  color: #ffffff;
+  font-size: 1em;
+  font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
-  
-button:hover {
-  background-color: #0056b3;
+
+.submit-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
+
+.submit-button:hover:not(:disabled) {
+  background-color: #995C1C;
+}
+
 
 .progress-bar {
   width: 100%;
-  background-color: #ddd;
-  border-radius: 5px;
+  background-color: #e0e0e0;
+  border-radius: 8px;
   overflow: hidden;
+  margin-top: 10px;
 }
-  
+
 .progress {
   height: 10px;
   background-color: #4caf50;
-  transition: width 0.4s;
+  width: 0%;
+  transition: width 0.4s ease;
 }
