--- a/godothub/src/styles/game_cards.css
+++ b/godothub/src/styles/game_cards.css
@@ -26,7 +26,37 @@
 .games-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  gap: 30px;
+}
+
+@media (max-width: 1400px) { /* Big Screens */
+  .games-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1024px) { /* Medium Screens */
+  .games-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) { /* Small Screens */
+  .games-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) { /* Small Screens */
+  .game-title {
+    font-size: 1.2rem;
+    margin: 5px 0;
+  }
+
+  .game-price-wrapper {
+    margin-top: 5px;
+    font-size: 1.2rem;
+  }
 }
 
 .game-card {
@@ -37,7 +67,7 @@
   transition: transform 0.3s;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  position: relative;
 }
 
 .game-card:hover {
@@ -46,9 +76,10 @@
 
 .game-image {
   width: 100%;
-  height: 200px;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   border-radius: 10px;
+
 }
 
 .game-info {
@@ -67,13 +98,14 @@
 }
 
 .game-price-wrapper {
-  background-color: #30302f;
-  display: inline-block;
-  padding: 5px 5px;
+  font-size: 1.1rem;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 4px 8px;
   border-radius: 5px;
-  margin-top: 5px auto;
-  white-space: normal;
-  overflow: hidden;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
 }
 
 .game-price {
@@ -83,26 +115,28 @@
   white-space: nowrap;
 }
 
+.game-card img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 .developer-info {
   display: flex;
   align-items: center;
-  margin-top: 10px;
-  justify-content: flex-start;
 }
 
 .developer-avatar {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   margin-right: 10px;
-  object-fit: cover;
 }
 
 .developer-name {
-  font-size: 1rem;
-  font-weight: 600;
-  color: #fff;
-  line-height: 1;
-  padding-bottom: 20px;
-  white-space: nowrap;
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: #dfdfdf;
+  margin: 0;
 }
