--- a/godothub/src/styles/navbar.css
+++ b/godothub/src/styles/navbar.css
@@ -1,58 +1,111 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #333;
-    padding: 10px 20px;
-  }
-  
-  .navbar-logo img {
-    width: 120px;
-  }
-  
-  .navbar-links {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-  }
-  
-  .navbar-links li {
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .navbar-search input {
-    padding: 5px;
-    border: none;
-    border-radius: 5px;
-  }
-  
-  .navbar-icons {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .cart-icon {
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 18px;
-    cursor: pointer;
-  }
-  
-  .signin-btn, .register-btn {
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .signin-btn:hover, .register-btn:hover {
-    background-color: #fff;
-    color: #333;
-  }
-  
+  display: flex;
+  align-items: center;
+  padding: 5px 15px;
+  background-color: #333;
+  color: #fff;
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.5rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-logo img {
+  width: 200px;
+  height: auto;
+}
+
+.navbar-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.navbar-links li {
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.navbar-search input {
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.navbar-search {
+  margin: 0 15px 0 0;
+}
+
+.navbar-icons {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: auto;
+}
+
+.cart-icon {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 1.5rem;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.signin-btn, .register-btn {
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.navbar-logo {
+  width: auto;
+  height: auto;
+  color: #ffbf00;
+  margin: 0 30px 0px 0;
+  align-items: center;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 15px;
+  flex-grow: 1;
+}
+
+.navbar-links a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.navbar-links a:hover {
+  color: #4792CC;
+}
+
+.navbar-buttons {
+  display: flex;
+  gap: 15px;
+}
+
+.user-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.user-info span {
+  font-size: 1rem;
+  color: #fff;
+}
